chandeliers-lus/tests/compile_fail/ui/tc/const/then.stderr
error: The delay operator (-> / fby) is not valid in const contexts
 --> tests/compile_fail/ui/tc/const/then.rs:3:21
  |
3 |     const X : int = 0 -> 1;
  |                     ^^^^^^
  |
  = note: You must put this definition inside a node
